--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -186,11 +186,22 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">26 avril 2020</span><span lang="en">26<sup>th</sup> april 2020</span>
+          </h2>
+          <p>
+              <span lang="fr">Dernière semaine pour le <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">sondage utilisateur</a> ! </span><span lang="en">Last week for the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">user survey</a> !</span>
+              <br><span lang="fr">Optimisation de la version mobile</span><span lang="en">Mobile website optimisation</span>
+              <br><span lang="fr">Correction de certains bugs</span><span lang="en">Bug fixes</span>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">19 avril 2020</span><span lang="en">19<sup>th</sup> april 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h2>
           <p>
-                  <a class="interpop"  href="../ingredients/Parsley_Seed_EO__Persil_Graine_HE.html"><span lang="en">Parsley Seed EO (CAS N°: 8000-68-8)</span><span lang="fr">Persil Graine HE (CAS N°: 8000-68-8)</span></a>
+              <a class="interpop"  href="../ingredients/Parsley_Seed_EO__Persil_Graine_HE.html"><span lang="en">Parsley Seed EO (CAS N°: 8000-68-8)</span><span lang="fr">Persil Graine HE (CAS N°: 8000-68-8)</span></a>
               <br><a class="interpop"  href="../ingredients/Coriander_Leaf_EO__Coriandre_Feuille_HE.html"><span lang="en">Coriander Leaf EO (CAS N°: 8008-52-4)</span><span lang="fr">Coriandre Feuille HE (CAS N°: 8008-52-4)</span></a>
               <br><a class="interpop"  href="../ingredients/Pear_Ester__Ester_Poire.html"><span lang="en">Pear Ester (CAS N°: 3025-30-7)</span><span lang="fr">Ester Poire (CAS N°: 3025-30-7)</span></a>
               <br><a class="interpop"  href="../ingredients/Delta-Decalactone__Decalactone-Delta.html"><span lang="en">Delta-Decalactone (CAS N°: 705-86-2)</span><span lang="fr">Decalactone-Delta (CAS N°: 705-86-2)</span></a>
