--- a/html/_/index.html
+++ b/html/_/index.html
@@ -114,7 +114,7 @@ crossorigin=""/>
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
-    <a class="btn mt-4 mb-3 text-in-color-brown  save_map_status_on_leaving they_support_us__link" role="button" href="../_/support.html">
+    <a class="btn mt-4 mb-3 save_map_status_on_leaving they_support_us__link" role="button" href="../_/support.html">
       <span lang="fr"><b>Ils nous soutiennent   </b></span>
       <span lang="en"><b>They support us  </b></span>
       <span><i class="fas fa-info-circle notifi1"></i></span>
@@ -126,7 +126,7 @@ crossorigin=""/>
       <i class="fas fa-info-circle notifi4"></i>
     </span>
     <br>
-    <a class="btn mt-3 mb-1 text-in-color-brown  save_map_status_on_leaving  the_news__link" role="button" href="../_/nouveaute.html">
+    <a class="btn mt-3 mb-1 save_map_status_on_leaving  the_news__link" role="button" href="../_/nouveaute.html">
       <span lang="fr"><b>Les nouveautés !   </b></span>
       <span lang="en"><b>News from ScenTree !  </b></span>
       <span><i class="fas fa-info-circle notifi2"></i></span>
