--- a/html/_/index.html
+++ b/html/_/index.html
@@ -60,10 +60,10 @@ crossorigin=""/>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="../_/contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="../_/Sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn mb-1" role="button" href="../_/legal.html"><span lang="fr">Mentions légales</span><span lang="en">Legal Mentions</span></a>
-    <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-    <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-    <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank"></a>
-    <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank"></a>
+    <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
+    <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
+    <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank" title="Découvrez notre page Facebook"></a>
+    <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank" title="Découvrez notre chaine Youtube"></a>
   </div>
   <span><i class="fas fa-info-circle notifi3"></i></span>
 </div>
@@ -150,10 +150,10 @@ crossorigin=""/>
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
       <div class="col-12 mt-1 text-center">
-          <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-          <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-          <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank"></a>
-          <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank"></a>
+          <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
+          <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
+          <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank" title="Découvrez notre page Facebook"></a>
+          <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank" title="Découvrez notre chaine Youtube"></a>
       </div>
     </div>
    <div class="copyright row mt-2 d-none d-sm-none d-md-block">
