--- a/html/_/index.html
+++ b/html/_/index.html
@@ -33,7 +33,7 @@ crossorigin=""/>
 <header class="d-md-none">
 <!-- fixed navbar -->
 <nav class="navbar  fixed-top  fillright">
-  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/menu.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum."></a>
+  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/menu.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. "></a>
 <div class="dropdown">
   <button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
@@ -92,7 +92,7 @@ crossorigin=""/>
   <div class="col-12 text-center">
     <h1>
       <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html">
-        <img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. ">
+        <img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. " title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. ">
       </a>
     </h1>
   </div>
