--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -33,7 +33,7 @@ crossorigin=""/>
 <header class="d-md-none">
 <!-- fixed navbar -->
 <nav class="navbar  fixed-top  fillright">
-  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/menu.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
+  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/menu.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. "></a>
 <div class="dropdown">
   <a href="../_/index.html"><i class="fas fa-reply" style="color: black;"></i></a>
 </div>
@@ -55,10 +55,10 @@ crossorigin=""/>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="../_/contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="../_/Sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn mb-1" role="button" href="../_/legal.html"><span lang="fr">Mentions légales</span><span lang="en">Legal Mentions</span></a>
-    <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-    <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-    <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank"></a>
-    <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank"></a>
+    <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
+    <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
+    <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank" title="Découvrez notre page Facebook"></a>
+    <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank" title="Découvrez notre chaine Youtube"></a>
   </div>
   <span><i class="fas fa-info-circle notifi3"></i></span>
 </div>
@@ -85,10 +85,11 @@ crossorigin=""/>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <div class="col-12 text-center">
-    <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="le logo de Scentree"></a>
+    <h1>
+      <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. "></a>
+    </h1>
   </div>
 </div>
-
 
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
@@ -110,8 +111,8 @@ crossorigin=""/>
           <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
         </a>
         <span class="col-12  m-0 p-0">
-          <a class="btn btn-sm save_map_status_on_leaving text-center" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">Enquête de satisfaction  </a>
-          <a class="btn btn-sm save_map_status_on_leaving text-center" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">Satisfaction survey  </a>
+          <a class="btn btn-sm text-in-color-brown save_map_status_on_leaving text-center" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK"><b>Donnez-nous votre avis </b> </a>
+          <a class="btn btn-sm text-in-color-brown save_map_status_on_leaving text-center" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK"><b>Give us your feedback </b></a>
         </span>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
@@ -123,10 +124,10 @@ crossorigin=""/>
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
       <div class="col-12 mb-1 p-0 text-center">
-          <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-          <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-          <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank"></a>
-          <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank"></a>
+          <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
+          <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
+          <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank" title="Découvrez notre page Facebook"></a>
+          <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank" title="Découvrez notre chaine Youtube"></a>
       </div>
     </div>
    <div class="copyright row  d-none d-sm-none d-md-block">
@@ -136,7 +137,6 @@ crossorigin=""/>
 </div>
 
 </div>
-
 </div>
 
 
