--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1026,14 +1026,14 @@ crossorigin=""/>
 
 <div class="modal-footer m-0 p-0">
   <div class="container-fluid">
-   <div class="row" style="background-color: blue;">  
+   <div class="row">  
     <div class="ad_to_the_potential_sponsors  col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
       <p class="pro_informations textitem-footer mt-1 mb-0">
         <span lang="fr" class="mb-0">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
         <span lang="en" class="mb-0">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
       </p>
     </div>
-    <div class="pro_informations_naturals col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" style="background-color: red;"></div>
+    <div class="pro_informations_naturals col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
    </div>
    </div>
 </div> <!--fin footer-->
