--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -186,6 +186,19 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">06 mai 2020</span><span lang="en">06<sup>th</sup> may 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 4 nouvelles matières premières</span><span lang="en" class="ajoutMP">4 new ingredients added </span>
+          </h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Woodinyl_Acetate__Acétate_de_Woodinyle.html"><span lang="en">Woodinyl Acetate (CAS N°: 68083-58-9)</span><span lang="fr">Acétate de Woodinyle (CAS N°: 68083-58-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Amber_Xtreme®__Amber_Xtreme®.html"><span lang="en">Amber Xtreme® (CAS N°: 476332-65-7)</span><span lang="fr">Amber Xtreme® (CAS N°: 476332-65-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ambrocenide®__Ambrocénide®.html"><span lang="en">Ambrocenide® (CAS N°: 211299-54-6)</span><span lang="fr">Ambrocénide® (CAS N°: 211299-54-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Aldehyde_C-11_MOA__Aldéhyde_C11_MOA.html"><span lang="en">Aldehyde C-11 MOA (CAS N°: 19009-56-4)</span><span lang="fr">Aldéhyde C11 MOA (CAS N°: 19009-56-4)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">26 avril 2020</span><span lang="en">26<sup>th</sup> april 2020</span>
           </h2>
           <p>
