--- a/html/_/index.html
+++ b/html/_/index.html
@@ -120,15 +120,15 @@ crossorigin=""/>
       <span><i class="fas fa-info-circle notifi1"></i></span>
     </a>
     <br>
-    <a class="col-12  mt-1 mb-1 text-in-color-brown save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
-      <span lang="fr"><b>Newsletter</b></span>
-      <span lang="en"><b>Newsletter</b></span>
-    </a>
-    <br>
-    <a class="btn mt-3 mb-2 text-in-color-brown  save_map_status_on_leaving  the_news__link" role="button" href="../_/nouveaute.html">
+    <a class="btn mt-1 mb-1 text-in-color-brown  save_map_status_on_leaving  the_news__link" role="button" href="../_/nouveaute.html">
       <span lang="fr"><b>Les nouveautés !   </b></span>
       <span lang="en"><b>News from ScenTree !  </b></span>
       <span><i class="fas fa-info-circle notifi2"></i></span>
+    </a>
+    <br>
+    <a class="col-12  mt-3 mb-2 text-in-color-brown save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
+      <span lang="fr"><b>Découvrez notre newsletter</b></span>
+      <span lang="en"><b>Discover our newsletter</b></span>
     </a>
   </div>    
 </div>
