--- a/html/_/index.html
+++ b/html/_/index.html
@@ -35,13 +35,18 @@ crossorigin=""/>
 <nav class="navbar  fixed-top  fillright">
   <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/menu.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. "></a>
 <div class="dropdown">
-  <a href="../_/index.html"><i class="fas fa-reply" style="color: black;"></i></a>
+  <button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
+  </button>
+  <form autocomplete="off"  class="dropdown-menu dropdown-menu-right p-0">
+    <div class=""><input lang="fr" type="search" class="searchinput-sm  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /><input lang="en" type="search" class="searchinput-sm  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." /></div>
+  </form>
 </div>
 <div class="dropdown pl-2">
   <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
   </button>
-  <div class="dropdown-menu dropdown-menu-right text-center" aria-labelledby="dropdownMenuButton-sm">
+  <div class="dropdown-menu dropdown-menu-right  text-center" aria-labelledby="dropdownMenuButton-sm">
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
       <label class="btn btn-light to_french_radio_input"><input type="radio" name="options" id="option1" checked /><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></label>
       <label class="btn btn-light to_english_radio_input"><input type="radio" name="options" id="option2" checked /><img src="../img/anglais.png" alt="ScenTree in english" class="imgen"></label>
@@ -49,8 +54,9 @@ crossorigin=""/>
     <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
     <a class="dropdown-item btn  save_map_status_on_leaving text-in-color-brown they_support_us__link" role="button" href="../_/support.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><span><i class="fas fa-info-circle notifi1"></i></span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving text-in-color-brown the_news__link" role="button" href="../_/nouveaute.html"><span lang="fr">Les nouveautés  </span><span lang="en">News from us  </span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <a class="dropdown-item btn save_map_status_on_leaving text-in-color-brown" role="button" href="/newsletter/newsletter/subscribe"><span lang="fr">Newsletter</span><span lang="en">Newsletter</span></a>
+
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="/newsletter/newsletter/subscribe"><span lang="fr">Newsletter</span><span lang="en">Newsletter</span></a>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="../_/contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn" role="button" href="../_/Sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn mb-1" role="button" href="../_/legal.html"><span lang="fr">Mentions légales</span><span lang="en">Legal Mentions</span></a>
@@ -66,7 +72,7 @@ crossorigin=""/>
 
 
 <!-- Class container corresponds à l'ensemble de la page-->
-<main role="main" class="flex-shrink-0 h-100">
+<main class="flex-shrink-0 h-100">
 
 <div class="container-fluid h-100 PageEntiere">
 <div class="row h-100">
@@ -85,31 +91,52 @@ crossorigin=""/>
   </div>
   <div class="col-12 text-center">
     <h1>
-      <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. "></a>
+      <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html">
+        <img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. " title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. ">
+      </a>
     </h1>
+  </div>
+</div>
+
+<div class="row align-items-start">
+  <div class="col-12 align-items-center m-0">
+    <div class="font-weight-bold text-size-1-1vw pb-1 d-none d-sm-none d-md-block"><span lang="fr">Trouver une matière première&nbsp;:&nbsp;</span><span lang="en">Find a raw material&nbsp;:&nbsp;</span></div>
+  </div>
+  <!--Recherche -->
+  <div class="col-12 text-center align-items-start">
+  <form autocomplete="off" id="searchForm">
+    <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
+    <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
+  </form>
   </div>
 </div>
 
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
-    <a class="btn mt-4 text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Come back to the classification </b></span></a>
+    <a class="btn mt-4 mb-3 text-in-color-brown save_map_status_on_leaving they_support_us__link" role="button" href="../_/support.html">
+      <span lang="fr"><b>Ils nous soutiennent   </b></span>
+      <span lang="en"><b>They support us  </b></span>
+      <span><i class="fas fa-info-circle notifi1"></i></span>
+    </a>
     <br>
-    <a class="btn mt-4 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/support.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
+    <a class="btn mt-1 mb-3 text-in-color-brown  save_map_status_on_leaving  the_news__link" role="button" href="../_/nouveaute.html">
+      <span lang="fr"><b>Les nouveautés !   </b></span>
+      <span lang="en"><b>News from ScenTree !  </b></span>
+      <span><i class="fas fa-info-circle notifi2"></i></span>
+    </a>
     <br>
-    <a class="btn mt-1 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <a class="col-12  mt-3 mb-3 text-in-color-brown save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
+      <span lang="fr"><b>Découvrez notre newsletter</b></span>
+      <span lang="en"><b>Discover our newsletter</b></span>
+    </a>
   </div>    
 </div>
-
-<div class="row correctspacebug"></div>
 
 <div class="row h-15 align-items-end">
   <div class="container-fluid text-center">
   <div class="col-12 p-0 mt-5 mb-1">
-        <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
-          <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
-        </a>
-        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
+        <a class="col-12 mt-5 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
         </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/contacts.html">
@@ -118,20 +145,21 @@ crossorigin=""/>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/legal.html">
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
-      <div class="col-12 mb-1 p-0 text-center">
+      <div class="col-12 mt-1 text-center">
           <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
           <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
           <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank" title="Découvrez notre page Facebook"></a>
           <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank" title="Découvrez notre chaine Youtube"></a>
       </div>
     </div>
-   <div class="copyright row  d-none d-sm-none d-md-block">
+   <div class="copyright row mt-2 d-none d-sm-none d-md-block">
         <sup>©</sup> Copyright 2019-2020 |  ScenTree SAS  | All Rights Reserved |
    </div>
   </div>
 </div>
 
 </div>
+
 </div>
 
 
