Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Cinquième Sens Co-working</title>
-<title lang="en">ScenTree - Cinquième Sens Co-working</title>
+<title lang="fr">ScenTree - [YOUR COMPANY - PREMIUM]</title>
+<title lang="en">ScenTree - [YOUR COMPANY - PREMIUM]</title>
 <!--Description Google-->
 <meta name="description" content="Découvrez qui est Cinquième Sens Co-working, le partenaire de ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
@@ -35,12 +35,12 @@ crossorigin=""/>
 <!-- MODAL Cinquième Sens -->
 
 <div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h1 class="text-center  modal-title modal-title1">Cinquième Sens Coworking : Work, Smell & Formulate</h1>
+  <h1 class="text-center  modal-title modal-title1">[YOUR COMPANY - PREMIUM]</h1>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
