--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -40,16 +40,15 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h1 class="text-center  modal-title modal-title1">[YOUR COMPANY - PREMIUM]</h1>
+  <h1 class="text-center  modal-title modal-title1"><b>[YOUR COMPANY - PREMIUM]</b></h1>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-  <p>
-    <span lang="fr">A l’écoute de son temps, au plus près des acteurs, et des passionnés de la belle parfumerie, Cinquième Sens met tout son savoir-faire et son expérience pour vous offrir un lieu innovant, unique et accessible. Soient 80m <sup>2</sup> d’espace, au pied de la tour Eiffel, comprenant trois niveaux d’accès en toute flexibilité : Olfawork, Olfaction et Olfalab. </span>
-    <span lang="en">Sensitive to its time, close to all of the beautiful perfumery actors and passionates, Cinquième Sens is putting all its know-how and experience to offer an innovative, unique and reachable place. Here are 80 m<sup>2</sup> of space, on bottom of the Eiffel Tower, including three levels of access, in the more flexible way : Olfawork, Olfaction and Olfalab.</span>
+  <p style="text-transform: uppercase; font-weight: bold; font-size: 2em;">
+    <span lang="en">This space is dedicated to you. It will allow you to highlight all the information that YOU want (history, philosophy, values, marketing, etc.). </span>
   </p>
   <p>
     <span lang="fr">Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></span>
