Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -48,7 +48,7 @@ crossorigin=""/>
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
   <p style="text-transform: uppercase; font-weight: bold; font-size: 2em;">
-    <span lang="en">This space is dedicated to you. It will allow you to highlight all the information that YOU want (history, philosophy, values, marketing, etc.). </span>
+    This space is dedicated to you. It will allow you to highlight all the information that YOU want (history, philosophy, values, marketing, etc.).
   </p>
   <p>
     <span lang="fr">Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></span>
