Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -47,12 +47,25 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 2em;">
+  <p style="text-transform: uppercase; font-weight: bold; font-size: 1.5em;">
     This space is dedicated to you. It will allow you to highlight all the information that YOU want (history, philosophy, values, marketing, etc.).
   </p>
+  <p style="text-transform: uppercase; font-weight: bold; font-size: 1em;">
+    <h2>CONTACT : </h2> XXXXXXXXXXXXX
+    <br>
+    <h2>MAIL : </h2> XXXXXXXXXXXXX
+  </p>
   <p>
-    <span lang="fr">Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></span>
-    <span lang="en">To find out more about <h2 class="text-size-14px">Cinquième Sens and its co-working space, follow the link to the <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">website</a></h2></span>
+    This company also commercialize : 
+    <ol>
+      <li>INGREDIENT A</li>
+      <li>INGREDIENT B</li>
+      <li>INGREDIENT C</li>
+      <li>INGREDIENT D</li>
+      <li>.</li>
+      <li>.</li>
+      <li>.</li>
+    </ol>
   </p>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></p></div>
@@ -105,4 +118,3 @@ if (Cookies.get('RGPD_no_cookie') == -1) {
 </body>
 </html>
 
- 
