Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -47,17 +47,17 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 1.5em;">
+  <p style="text-transform: uppercase; font-weight: bold; font-size: 1.2em;">
     This space is dedicated to you. It will allow you to highlight all the information that YOU want (history, philosophy, values, marketing, etc.).
   </p>
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 1em;">
-    <h2>CONTACT : </h2> XXXXXXXXXXXXX
+  <p style="text-transform: uppercase; font-weight: bold; font-size: 0.8em;">
+    <h2>CONTACT :  XXXXXXXXXXXXX </h2>
     <br>
-    <h2>MAIL : </h2> XXXXXXXXXXXXX
+    <h2>MAIL :  XXXXXXXXXXXXX </h2>
   </p>
-  <p>
+  <p style="text-transform: uppercase; font-weight: bold; font-size: 0.8em;">
     This company also commercialize : 
-    <ol>
+    <ul>
       <li>INGREDIENT A</li>
       <li>INGREDIENT B</li>
       <li>INGREDIENT C</li>
@@ -65,7 +65,7 @@ crossorigin=""/>
       <li>.</li>
       <li>.</li>
       <li>.</li>
-    </ol>
+    </ul>
   </p>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></p></div>
