Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -50,12 +50,12 @@ crossorigin=""/>
   <p style="text-transform: uppercase; font-weight: bold; font-size: 1.2em;">
     This space is dedicated to you. It will allow you to highlight all the information that YOU want (history, philosophy, values, marketing, etc.).
   </p>
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 0.8em;">
-    <h2>CONTACT :  XXXXXXXXXXXXX </h2>
+  <p style="text-transform: uppercase; font-weight: bold; font-size: 1em;">
+    CONTACT :  XXXXXXXXXXXXX
     <br>
-    <h2>MAIL :  XXXXXXXXXXXXX </h2>
+    MAIL :  XXXXXXXXXXXXX 
   </p>
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 0.8em;">
+  <p style="text-transform: uppercase; font-weight: bold; font-size: 1em;">
     This company also commercialize : 
     <ul>
       <li>INGREDIENT A</li>
