Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -47,15 +47,17 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 1.2em;">
+  <p style="text-transform: uppercase; font-size: 1.2em;">
     This space is dedicated to you. It will allow you to highlight all the information that YOU want (history, philosophy, values, marketing, etc.).
   </p>
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 1em;">
+  <p style="text-transform: uppercase; font-size: 1em;">
     CONTACT :  XXXXXXXXXXXXX
     <br>
     MAIL :  XXXXXXXXXXXXX 
+    <br>
+    WEBSITE : XXXXXXXXXXXXXX
   </p>
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 1em;">
+  <p style="text-transform: uppercase; font-size: 1em;">
     This company also commercialize : 
     <ul>
       <li>INGREDIENT A</li>
