Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -47,7 +47,7 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-  <p style="text-transform: uppercase; font-weight: bold; font-size: 1.2em;">
+  <p style="text-transform: uppercase; color: #D64E26; font-size: 1.2em;">
     This space is dedicated to you. It will allow you to highlight all the information that <u>YOU</u> want (history, philosophy, values, marketing, etc.).<br>
     No caracter limitation<br>
     No link (dofollow) limitation
@@ -60,7 +60,7 @@ crossorigin=""/>
     <b>WEBSITE :</B> XXXXXXXXXXXXXX
   </p>
   <p style="text-transform: uppercase; font-size: 1em;">
-    This company also commercialize : 
+    <b>This company also commercialize :</b> 
     <ul>
       <li>INGREDIENT A</li>
       <li>INGREDIENT B</li>
