Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -65,10 +65,7 @@ crossorigin=""/>
       <li>INGREDIENT A</li>
       <li>INGREDIENT B</li>
       <li>INGREDIENT C</li>
-      <li>INGREDIENT D</li>
-      <li>.</li>
-      <li>.</li>
-      <li>.</li>
+      <li>INGREDIENT D ...</li>
     </ul>
   </p>
 </div>
