Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -47,17 +47,17 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-  <p style="text-transform: uppercase; color: #D64E26; font-size: 1.2em;">
-    This space is dedicated to you. It will allow you to highlight all the information that <u>YOU</u> want (history, philosophy, values, marketing, etc.).<br>
-    No caracter limitation<br>
-    No link (dofollow) limitation
-  </p>
   <p style="text-transform: uppercase; font-size: 1em;">
     <b>CONTACT :</b>  XXXXXXXXXXXXX
     <br>
     <b>MAIL :</b>  XXXXXXXXXXXXX 
     <br>
     <b>WEBSITE :</B> XXXXXXXXXXXXXX
+  </p>
+  <p style="text-transform: uppercase; color: #D64E26; font-size: 1.2em;">
+    This space is dedicated to you. It will allow you to highlight all the information that <u>YOU</u> want (history, philosophy, values, marketing, etc.).<br>
+    No caracter limitation<br>
+    No link (dofollow) limitation
   </p>
   <p style="text-transform: uppercase; font-size: 1em;">
     <b>This company also commercialize :</b> 
@@ -69,7 +69,7 @@ crossorigin=""/>
     </ul>
   </p>
 </div>
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/[YOUR COMPANY - PREMIUM].png" alt="le logo de [YOUR COMPANY - PREMIUM]"></p></div>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/Givaudan.png" alt="le logo de [YOUR COMPANY - PREMIUM]"></p></div>
 </div>
 </div>
 </div>
