Update [YOUR COMPANY - PREMIUM].html

--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -35,7 +35,7 @@ crossorigin=""/>
 <!-- MODAL Cinquième Sens -->
 
 <div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
@@ -46,15 +46,15 @@ crossorigin=""/>
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
 <div class="container-fluid">
 <div class="row">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-9">
   <p style="text-transform: uppercase; font-size: 1em;">
     <b>CONTACT :</b>  XXXXXXXXXXXXX
     <br>
     <b>MAIL :</b>  XXXXXXXXXXXXX 
     <br>
-    <b>WEBSITE :</B> XXXXXXXXXXXXXX
+    <b>WEBSITE :</b> XXXXXXXXXXXXXX
   </p>
-  <p style="text-transform: uppercase; color: #D64E26; font-size: 1.2em;">
+  <p style="text-transform: uppercase; font-size: 1.2em;">
     This space is dedicated to you. It will allow you to highlight all the information that <u>YOU</u> want (history, philosophy, values, marketing, etc.).<br>
     No caracter limitation<br>
     No link (dofollow) limitation
@@ -69,7 +69,11 @@ crossorigin=""/>
     </ul>
   </p>
 </div>
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/Givaudan.png" alt="le logo de [YOUR COMPANY - PREMIUM]"></p></div>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 order-first order-sm-first order-lg-last">
+  <p class="text-center">
+    <img class="img-fluid max-height-200px" src="../img/sponsors/Givaudan.png" alt="le logo de [YOUR COMPANY - PREMIUM]">
+  </p>
+</div>
 </div>
 </div>
 </div>
