--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -55,7 +55,7 @@ crossorigin=""/>
     <b>WEBSITE :</b> XXXXXXXXXXXXXX
   </p>
   <p style="text-transform: uppercase; font-size: 1.2em;">
-    This space is dedicated to you. It will allow you to highlight all the information that <u>YOU</u> want (history, philosophy, values, marketing, etc.).<br>
+    This space is dedicated to you. It means that you will be able to highlight all the information that <u>YOU</u> wants to give to our users (history, philosophy, values, marketing, etc.). This presentation is totally free.<br>
     No caracter limitation<br>
     No link (dofollow) limitation
   </p>
