Update [YOUR COMPANY - STANDARD].html

--- a/html/supporters/[YOUR COMPANY - STANDARD].html
+++ b/html/supporters/[YOUR COMPANY - STANDARD].html
@@ -56,7 +56,10 @@ crossorigin=""/>
   </p>
   <p style="text-transform: uppercase; font-size: 1.2em;">
     This space is dedicated to you. It means that you will be able to highlight all the information that <u>YOU</u> wants to give to our users (history, philosophy, values, marketing, etc.). This presentation is totally free.<br>
-    Caracter limitation : 2000<br>
+  </p>
+  <p style="text-transform: uppercase; color: #D64E26; font-size: 1.2em;">
+    Caracter limitation : 2000
+    <br>
     Link (dofollow) limitation : 2
   </p>
   <p style="text-transform: uppercase; font-size: 1em;">
