Update [YOUR COMPANY - STANDARD].html

--- a/html/supporters/[YOUR COMPANY - STANDARD].html
+++ b/html/supporters/[YOUR COMPANY - STANDARD].html
@@ -74,7 +74,7 @@ crossorigin=""/>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 order-first order-sm-first order-lg-last">
   <p class="text-center">
-    <img class="img-fluid max-height-200px" src="../img/sponsors/Givaudan.png" alt="le logo de [YOUR COMPANY - STANDARD]">
+    <img class="img-fluid max-height-200px" src="../img/sponsors/Capua.png" alt="le logo de [YOUR COMPANY - STANDARD]">
   </p>
 </div>
 </div>
