--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1033,7 +1033,7 @@ crossorigin=""/>
         <span lang="en" class="mb-0">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
       </p>
     </div>
-    <div class="pro_informations_naturals col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" style="background-color: blue;"></div>
+    <div class="pro_informations_naturals col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
    </div>
    </div>
 </div> <!--fin footer-->
