--- a/html/_/support.html
+++ b/html/_/support.html
@@ -192,10 +192,10 @@ crossorigin=""/>
         </div>
 
         <div class="mt-3 m-0 p-0 col-12 sponsors">
-          <a class="btn offset-1 col-4 logopremium" role="button" href="../supporters/cinquieme_sens.html">
+          <a class="btn offset-1 col-4 logopremium" role="button" href="../supporters/[YOUR COMPANY - PREMIUM].html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Givaudan.png" alt="le logo de Cinquième Sens">
           </a>
-          <a class="btn offset-2 col-4 logopremium" role="button" href="../supporters/cinquieme_sens.html">
+          <a class="btn offset-2 col-4 logopremium" role="button" href="../supporters/[YOUR COMPANY - PREMIUM].html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Givaudan.png" alt="le logo de Cinquième Sens">
           </a>
           <!-- Débloquer le deuxième Premium sur la première ligne
@@ -206,13 +206,13 @@ crossorigin=""/>
         </div>
         <!--Débloquer une ligne de standard-->
         <div class="mt-3 m-0 p-0 col-12 sponsors">
-          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
+          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/[YOUR COMPANY - STANDARD].html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
           </a>
-          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
+          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/[YOUR COMPANY - STANDARD].html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Capua.png" alt="le logo de Cinquième Sens">
           </a>
-          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
+          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/[YOUR COMPANY - STANDARD].html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Capua.png" alt="le logo de Cinquième Sens">
           </a>
         </div>
