Update [YOUR COMPANY - STANDARD].html

--- a/html/supporters/[YOUR COMPANY - STANDARD].html
+++ b/html/supporters/[YOUR COMPANY - STANDARD].html
@@ -65,10 +65,10 @@ crossorigin=""/>
   <p style="text-transform: uppercase; font-size: 1em;">
     <b>This company also commercialize :</b> 
     <ul>
-      <li>INGREDIENT A</li>
-      <li>INGREDIENT B</li>
-      <li>INGREDIENT C</li>
-      <li>INGREDIENT D ...</li>
+      <li><a>INGREDIENT A</a></li>
+      <li><a>INGREDIENT B</a></li>
+      <li><a>INGREDIENT C</a></li>
+      <li><a>INGREDIENT D ...</a></li>
     </ul>
   </p>
 </div>
