Update [YOUR COMPANY - STANDARD].html

--- a/html/supporters/[YOUR COMPANY - STANDARD].html
+++ b/html/supporters/[YOUR COMPANY - STANDARD].html
@@ -65,10 +65,10 @@ crossorigin=""/>
   <p style="text-transform: uppercase; font-size: 1em;">
     <b>This company also commercialize :</b> 
     <ul>
-      <li><a href="">INGREDIENT A</a></li>
-      <li><a href="">INGREDIENT B</a></li>
-      <li><a href="">INGREDIENT C</a></li>
-      <li><a href="">INGREDIENT D ...</a></li>
+      <li><a href="voila">INGREDIENT A</a></li>
+      <li><a href="voila">INGREDIENT B</a></li>
+      <li><a href="voila">INGREDIENT C</a></li>
+      <li><a href="voila">INGREDIENT D ...</a></li>
     </ul>
   </p>
 </div>
