--- a/html/supporters/[YOUR COMPANY - PREMIUM].html
+++ b/html/supporters/[YOUR COMPANY - PREMIUM].html
@@ -55,17 +55,17 @@ crossorigin=""/>
     <b>WEBSITE :</b> XXXXXXXXXXXXXX
   </p>
   <p style="text-transform: uppercase; font-size: 1.2em;">
-    This space is dedicated to you. It means that you will be able to highlight all the information that <u>YOU</u> wants to give to our users (history, philosophy, values, marketing, etc.). This presentation is totally free.<br>
+    This space is dedicated to you. It means that you will be able to highlight all the information that <u>YOU</u> want to give to our users (history, philosophy, values, marketing, etc.). This presentation is totally free.<br>
     No caracter limitation<br>
     No link (dofollow) limitation
   </p>
   <p style="text-transform: uppercase; font-size: 1em;">
     <b>This company also commercialize :</b> 
     <ul>
-      <li><a>INGREDIENT A</a></li>
-      <li><a>INGREDIENT B</a></li>
-      <li><a>INGREDIENT C</a></li>
-      <li><a>INGREDIENT D ...</a></li>
+      <li><a href="voila">INGREDIENT A</a></li>
+      <li><a href="voila">INGREDIENT B</a></li>
+      <li><a href="voila">INGREDIENT C</a></li>
+      <li><a href="voila">INGREDIENT D ...</a></li>
     </ul>
   </p>
 </div>
