--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -181,7 +181,16 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
-          <h2 id="heading22"><span lang="fr">06 mai 2020</span><span lang="en">06<sup>th</sup> may 2020</span>
+          <h2 id="heading22"><span lang="fr">10 mai 2020</span><span lang="en">10<sup>th</sup> may 2020</span></h2>
+          <p>
+              <span lang="en">DataBase improvement </span><span lang="fr">Optimisation de la base de donnée</span>
+              <br><span lang="fr">Correction de certains bugs</span><span lang="en">Bug fixes </span>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
+          <h2 id="heading22"><span lang="fr">03 mai 2020</span><span lang="en">03<sup>th</sup> may 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 4 nouvelles matières premières</span><span lang="en" class="ajoutMP">4 new ingredients added </span>
           </h2>
           <p>
