--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1244,6 +1244,15 @@ crossorigin=""/>
                 <span id="modalbody-bp1"></span>
               </h3>
             </p>
+            <p>
+              <h2 class="item d-inline">
+                <span lang="fr">Seuil de détection <sup class="fas fa-question-circle iconetab" title="Corresponds à la concentration de la substance la plus faible qui puisse être sentie par un groupe de sujets. Cette concentration est généralement exprimée en ppm (10e-6 / partie par million) ou ppb (10e-9 / Partie par milliard). Plus cette concentration est faible, plus la substance a une intensité olfactive importante."></sup> :</span>
+                <span lang="en">Detection Threshold <sup class="fas fa-question-circle icone" title="Refers to the lowest concentration of the substance that can be detected by a group of subjects. This concentration is usually expressed in ppm (10e-6 / part per million) or ppb (10e-9 / part per trillion). The lower this concentration, the more intensely the substance is scented."></sup> :</span>
+              </h2>
+              <h3 class="textitem d-inline">
+                <span id="modalbody-detection"></span>
+              </h3>
+            </p>
           </div>
           <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
               <span id="modalbody-pict1" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
