--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1229,7 +1229,7 @@ crossorigin=""/>
             <p>
               <h2 class="item d-inline text-size-16px">
                 <span lang="fr">Point de Fusion <sup class="fas fa-question-circle iconetab" title="Température à une pression donnée, à laquelle un composé chimique fond, c'est-à-dire passe de l'état solide à l'état liquide."></sup> :</span>
-                <span lang="en">Fusion Point <sup class="fas fa-question-circle icone" title="Temperature at a given pressure at which a chemical compound melts, i.e. changes from solid to liquid state."></sup> :></span>
+                <span lang="en">Fusion Point <sup class="fas fa-question-circle icone" title="Temperature at a given pressure at which a chemical compound melts, i.e. changes from solid to liquid state."></sup> :</span>
               </h2>
               <h3 class="textitem d-inline">
                 <span id="modalbody-fusionp1"></span>
