--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -56,13 +56,8 @@ crossorigin=""/>
   <p style="text-transform: uppercase; font-size: 1.2em;">
     This space is dedicated to you. It means that you will be able to highlight all the information that <u>YOU</u> wants to give to our users (history, philosophy, values, marketing, etc.). This presentation is totally free.<br>
   </p>
-  <p style="text-transform: uppercase; color: #D64E26; font-size: 1.2em;">
-    Caracter limitation : 500
-    <br>
-    Link (dofollow) limitation : 2
-  </p>
   <p style="text-transform: uppercase; font-size: 1em;">
-    <b>This company also commercialize :</b> 
+    <b>This company also commercialize : (ici je n'ai pas codé la liste du devis, attendez-vous à un lien vers toutes les autres MP que vous sponsorisez chez ScenTree)</b> 
     <ul>
       <li><a href="voila">INGREDIENT A</a></li>
       <li><a href="voila">INGREDIENT B</a></li>
@@ -73,7 +68,7 @@ crossorigin=""/>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 order-first order-sm-first order-lg-last">
   <p class="text-center">
-    <img class="img-fluid max-height-200px" src="../img/sponsors/Capua.png" alt="le logo de [YOUR COMPANY - STANDARD]">
+    <img class="img-fluid max-height-200px" src="../img/sponsors/quosentis.png" alt="le logo de Quosentis">
   </p>
 </div>
 </div>
