--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -46,7 +46,7 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-9">
-  <p style="text-transform: uppercase; font-size: 1em;">
+  <p style="font-size: 1em;">
     <b>CONTACT :</b>  Julie ROCHON
     <br>
     <b>MAIL :</b>  <a HREF="mailto:san@antonio.net">contact@quosentis.com</a>
@@ -68,7 +68,7 @@ crossorigin=""/>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 order-first order-sm-first order-lg-last">
   <p class="text-center">
-    <img class="img-fluid max-height-200px" src="../img/sponsors/quosentis.png" alt="le logo de Quosentis">
+    <img class="img-fluid max-height-200px" src="../img/sponsors/Quosentis.png" alt="le logo de Quosentis">
   </p>
 </div>
 </div>
