--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -57,7 +57,7 @@ crossorigin=""/>
     This space is dedicated to you. It means that you will be able to highlight all the information that <u>YOU</u> wants to give to our users (history, philosophy, values, marketing, etc.). This presentation is totally free.<br>
   </p>
   <p style="text-transform: uppercase; font-size: 1em;">
-    <b>This company also commercialize : (ici je n'ai pas codé la liste du devis, attendez-vous à un lien vers toutes les autres MP que vous sponsorisez chez ScenTree)</b> 
+    <b>This company also commercialize : </b><br>(ici je n'ai pas codé la liste du devis, attendez-vous à un lien vers toutes les autres MP que vous sponsorisez chez ScenTree) 
     <ul>
       <li><a href="voila">INGREDIENT A</a></li>
       <li><a href="voila">INGREDIENT B</a></li>
@@ -68,7 +68,7 @@ crossorigin=""/>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 order-first order-sm-first order-lg-last">
   <p class="text-center">
-    <img class="img-fluid max-height-200px" src="../img/sponsors/Quosentis.png" alt="le logo de Quosentis">
+    <img class="img-fluid max-height-200px" src="../img/sponsors/Quosentis.png" alt="Quosentis">
   </p>
 </div>
 </div>
