--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -39,7 +39,7 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h1 class="text-center  modal-title modal-title1"><b>Quosentis</b></h1>
+  <h1 class="text-center  modal-title modal-title1"><b>QUOSENTIS</b></h1>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
