--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -181,6 +181,17 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">24 mai 2020</span><span lang="en">24<sup>th</sup> may 2020</span></h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Amyl_Acetate__Acétate d_Amyle.html"><span lang="en">Amyl Acetate (CAS N°: 628-63-7)</span><span lang="fr">Acétate d'Amyle (CAS N°: 628-63-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Prenyl_Acetate__Acétate_de_Prényle.html"><span lang="en">Prenyl Acetate (CAS N°: 1191-16-8)</span><span lang="fr">Acétate de Prényle (CAS N°: 1191-16-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Andrane®__Andrane®.html"><span lang="en">Andrane<sup>®</sup> (CAS N°: 13567-39-0)</span><span lang="fr">Andrane<sup>®</sup> (CAS N°: 13567-39-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Applelide®__Applelide®.html"><span lang="en">Applelide<sup>®</sup> (CAS N°: 478695-70-4)</span><span lang="fr">Applelide<sup>®</sup> (CAS N°: 478695-70-4)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">10 mai 2020</span><span lang="en">10<sup>th</sup> may 2020</span></h2>
           <p>
               <span lang="en">DataBase improvement </span><span lang="fr">Optimisation de la base de donnée</span>
@@ -195,8 +206,8 @@ crossorigin=""/>
           </h2>
           <p>
               <a class="interpop"  href="../ingredients/Woodinyl_Acetate__Acétate_de_Woodinyle.html"><span lang="en">Woodinyl Acetate (CAS N°: 68083-58-9)</span><span lang="fr">Acétate de Woodinyle (CAS N°: 68083-58-9)</span></a>
-              <br><a class="interpop"  href="../ingredients/Amber_Xtreme®__Amber_Xtreme®.html"><span lang="en">Amber Xtreme® (CAS N°: 476332-65-7)</span><span lang="fr">Amber Xtreme® (CAS N°: 476332-65-7)</span></a>
-              <br><a class="interpop"  href="../ingredients/Ambrocenide®__Ambrocénide®.html"><span lang="en">Ambrocenide® (CAS N°: 211299-54-6)</span><span lang="fr">Ambrocénide® (CAS N°: 211299-54-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Amber_Xtreme®__Amber_Xtreme®.html"><span lang="en">Amber Xtreme<sup>®</sup> (CAS N°: 476332-65-7)</span><span lang="fr">Amber Xtreme<sup>®</sup> (CAS N°: 476332-65-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ambrocenide®__Ambrocénide®.html"><span lang="en">Ambrocenide<sup>®</sup> (CAS N°: 211299-54-6)</span><span lang="fr">Ambrocénide<sup>®</sup> (CAS N°: 211299-54-6)</span></a>
               <br><a class="interpop"  href="../ingredients/Aldehyde_C-11_MOA__Aldéhyde_C11_MOA.html"><span lang="en">Aldehyde C-11 MOA (CAS N°: 19009-56-4)</span><span lang="fr">Aldéhyde C11 MOA (CAS N°: 19009-56-4)</span></a>
           </p>
         </div>
