--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -190,8 +190,8 @@ crossorigin=""/>
     <div class="col-6 text-center">
       <span lang="fr"><b class="bplus">Ingrédients Synthétiques : </b></span>
       <span lang="en"><b class="bplus">Synthetics : </b></span>
-      <span lang="fr"><ul id="listeMP-Ingredients-synthetiques-FR"></span>
-      <span lang="en"><ul id="listeMP-Ingredients-synthetiques-EN"></span>
+      <span lang="fr"><ul id="listeMP-Ingredients-synthetiques-FR"></ul></span>
+      <span lang="en"><ul id="listeMP-Ingredients-synthetiques-EN"></ul></span>
     </div>
   </div>
 </div>
