--- a/html/_/index.html
+++ b/html/_/index.html
@@ -463,6 +463,10 @@ crossorigin=""/>
           <h3 class="textitem2 d-inline">
             <span id="modalbody-medecine"></span>
           </h3>
+          <p class="lienarticlereglementation mt-1">
+            <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
+            <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
+          </p>
         </p>
       </div>
     </div>
