--- a/html/_/index.html
+++ b/html/_/index.html
@@ -460,13 +460,15 @@ crossorigin=""/>
             <span lang="fr">Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</span>
             <span lang="en">Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</span>
           </h2>
+          <br>
+          <span class="lienarticlereglementation mt-1">
+            <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
+            <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
+          </span>
+          <br>
           <h3 class="textitem2 d-inline">
             <span id="modalbody-medecine"></span>
           </h3>
-          <p class="lienarticlereglementation mt-1">
-            <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
-            <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
-          </p>
         </p>
       </div>
     </div>
