--- a/html/_/index.html
+++ b/html/_/index.html
@@ -462,8 +462,8 @@ crossorigin=""/>
           </h2>
           <br>
           <span class="lienarticlereglementation mt-1">
-            <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
-            <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
+            <span lang="fr">Les informations délivrées ci-dessous sont issues d'ouvrages de référence en aromathérapie. Données à titre informatif, elles ne sauraient en aucun cas constituer une information médicale, ni engager la responsabilité de ScenTree.</span>
+            <span lang="en">Informations provided below are taken from reference works in aromatherapy. They are given for information purposes only and can not constitute medical information, nor engage the responsibility of ScenTree.</a></span>
           </span>
           <br>
           <h3 class="textitem2 d-inline">
