--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -181,6 +181,21 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">31 mai 2020</span><span lang="en">31<sup>st</sup> may 2020</span></h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Costus_Oliffac®__Costus_Oliffac®.html"><span lang="en">Costus Oliffac<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Costus Oliffac<sup>®</sup> (CAS N°: BASE)</span></a>
+              <br><a class="interpop"  href="../ingredients/Aldehyde_Citron®__Aldéhyde_Citron®.html"><span lang="en">Aldehyde Citron<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Aldéhyde Citron<sup>®</sup> (CAS N°: BASE)</span></a>
+              <br><a class="interpop"  href="../ingredients/Algix®__Algix®.html"><span lang="en">Algix<sup>®</sup> (CAS N°: 72987-59-8)</span><span lang="fr">Algix<sup>®</sup> (CAS N°: 72987-59-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ambrettex_XMN®__Ambrettex_XMN®.html"><span lang="en">Ambrettex XMN<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Ambrettex XMN<sup>®</sup> (CAS N°: BASE)</span></a>
+              <br><a class="interpop"  href="../ingredients/Aldron®__Aldron®.html"><span lang="en">Aldron<sup>®</sup> (CAS N°: 68901-22-4)</span><span lang="fr">Aldron<sup>®</sup> (CAS N°: 68901-22-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Isononyl_Acetate__Acétate_d_Isononyle.html"><span lang="en">Isononyl Acetate (CAS N°: 40379-24-6)</span><span lang="fr">Acétate d'Isononyle (CAS N°: 40379-24-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Muguet_Aldehyde__Aldéhyde_Muguet.html"><span lang="en">Muguet Aldehyde (CAS N°: 7492-67-3)</span><span lang="fr">Aldéhyde Muguet (CAS N°: 7492-67-3)</span></a>
+              <br><a class="interpop"  href="../ingredients/Isovaleraldehyde__Aldéhyde_Isovalérianique.html"><span lang="en">Isovaleraldehyde (CAS N°: 590-86-3)</span><span lang="fr">Aldéhyde Isovalérianique (CAS N°: 590-86-3)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">24 mai 2020</span><span lang="en">24<sup>th</sup> may 2020</span></h2>
           <p>
               <a class="interpop"  href="../ingredients/Amyl_Acetate__Acétate d_Amyle.html"><span lang="en">Amyl Acetate (CAS N°: 628-63-7)</span><span lang="fr">Acétate d'Amyle (CAS N°: 628-63-7)</span></a>
