--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -246,8 +246,8 @@ crossorigin=""/>
           <h2 lang="en" style="font-size: 0.8em;"><b>Just climb to the tree and join us in this experience full of story-telling, this invitation to a trip through raw materials: ScenTree. </b></h2>
         </div>
         <div class="col-12 text-center" style="align-items: center;">
-          <p class="license text-center" lang="fr"><i>Pour tout complément d'information, question ou remarque, merci de rentrer en contact avec <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD </a></i></p>
-          <p class="license text-center" lang="en"><i>For any information, request or remark, please contact <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD</a></i></p>
+          <p class="license text-center" lang="fr"><i>Pour tout complément d'information, merci de rentrer en contact avec <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD </a></i></p>
+          <p class="license text-center" lang="en"><i>For any information, please contact <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD</a></i></p>
 
           <p class="license"><i><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><br />ScenTree project is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</i><br></p>
 
